Preserve original header order